feat: Beta version 1.1.2-beta.1 with offline mode, launch checks, and MOD update date display / 发布1.1.2-beta.1测试版本，新增离线模式、启动检查与MOD更新日期显示   - Introduce offline mode with graceful fallback when network unavailable, allowing local operations while blocking installs/updates / 引入离线模式，网络不可用时优雅降级，允许本地操作但阻止安装更新   - Add pre-launch conflict and dependency validation with user confirmation dialogs to prevent runtime issues / 新增启动前冲突与依赖验证，通过确认对话框防止运行时问题   - Display MOD update dates with relative time format (today/yesterday/X days ago) alongside version numbers / 显示MOD更新日期，采用相对时间格式（今天/昨天/X天前）并附版本号   - Preserve disabled MOD backups during cleanup, only remove uninstalled backups to maintain rollback capability / 清理时保留已禁用MOD备份，仅删除已卸载备份以保持回滚能力   - Enhance GitHub rate limit message with proxy server switching suggestion / 优化GitHub频率限制提示，建议切换代理服务器   - Simplify .gitignore by removing AI assistant file exclusions / 简化.gitignore，移除AI助手文件排除规则   - Bump version to 1.1.2-beta.1 with updated assembly metadata / 升级版本至1.1.2-beta.1并更新程序集元数据

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -2361,4 +2361,52 @@
   <data name="NonSteamVersionDetected" xml:space="preserve">
     <value>Non-Steam version detected - please verify Steam version is installed</value>
   </data>
+  <data name="OfflineModeTitle" xml:space="preserve">
+    <value>Offline Mode</value>
+  </data>
+  <data name="OfflineModeMessage" xml:space="preserve">
+    <value>Unable to connect to server, entering offline mode.\n\nYou can continue using local features (disable/uninstall mods), but cannot install or update mods.\n\nPlease check your network connection and restart the application.</value>
+  </data>
+  <data name="EnteringOfflineMode" xml:space="preserve">
+    <value>Entering offline mode</value>
+  </data>
+  <data name="OfflineModeActive" xml:space="preserve">
+    <value>Offline Mode - Using cached data</value>
+  </data>
+  <data name="NetworkConnectionFailed" xml:space="preserve">
+    <value>Network connection failed</value>
+  </data>
+  <data name="ConflictDetectedOnLaunch" xml:space="preserve">
+    <value>MOD Conflict Detected</value>
+  </data>
+  <data name="ConflictWarningMessage" xml:space="preserve">
+    <value>The following mods have conflicts:\n\n{0}\n\nThese mods may not work properly. Do you still want to launch the game?</value>
+  </data>
+  <data name="DependencyMissingOnLaunch" xml:space="preserve">
+    <value>Missing Dependencies Detected</value>
+  </data>
+  <data name="DependencyWarningMessage" xml:space="preserve">
+    <value>The following mods are missing required dependencies:\n\n{0}\n\nThese mods may not work properly. Do you still want to launch the game?</value>
+  </data>
+  <data name="CheckingModConflictsAndDependencies" xml:space="preserve">
+    <value>Checking mod conflicts and dependencies...</value>
+  </data>
+  <data name="ModRequiresDependency" xml:space="preserve">
+    <value>{0} requires: {1}</value>
+  </data>
+  <data name="ModConflictsWith" xml:space="preserve">
+    <value>{0} conflicts with {1}</value>
+  </data>
+  <data name="DaysAgo" xml:space="preserve">
+    <value>{0} days ago</value>
+  </data>
+  <data name="Today" xml:space="preserve">
+    <value>Today</value>
+  </data>
+  <data name="Yesterday" xml:space="preserve">
+    <value>Yesterday</value>
+  </data>
+  <data name="UpdateDate" xml:space="preserve">
+    <value>Update Date</value>
+  </data>
 </root>
