feat: Beta version 1.1.3-beta.1 with GitHub API token support and parallel loading optimization /发布1.1.3-beta.1测试版本，新增GitHub API Token支持与并行加载优化     - Add GitHub API token authentication to bypass rate limits (60→5000 requests/hour) with automatic direct connection / 新增GitHub API Token认证功能，突破频率限制（60→5000请求/小时）并自动直连     - Optimize MOD loading with parallel GitHub version fetching to reduce startup time / 优化MOD加载流程，并行获取GitHub版本信息以缩短启动时间     - Parallelize version update checks across all MODs for faster refresh / 并行化版本更新检查，加速所有MOD的刷新速度     - Fix backup file name matching logic by extracting original filename from backup path / 修复备份文件名匹配逻辑，从备份路径中提取原始文件名     - Fix IsSupportedManualMod flag for manually installed MODs / 修复手动安装MOD的IsSupportedManualMod标记     - Add translation tips panel warning about FPS impact and hotkey conflicts / 新增翻译提示面板，警告FPS影响与快捷键冲突     - Disable proxy settings when GitHub token is configured to ensure direct API access / 配置GitHub Token时自动禁用代理设置以确保直连API     - Bump version to 1.1.3-beta.1 with updated assembly metadata / 升级版本至1.1.3-beta.1并更新程序集元数据

--- a/Resources/Strings.zh-CN.resx
+++ b/Resources/Strings.zh-CN.resx
@@ -1276,7 +1276,7 @@
     <value>应用语言设置失败</value>
   </data>
   <data name="RestartApplicationError" xml:space="preserve">
-    <value>重启应用程序错误</value>
+    <value>重启应用程序失败</value>
   </data>
   <data name="FailedToRestartApplication" xml:space="preserve">
     <value>重启应用程序失败。请手动重启</value>
@@ -2280,6 +2280,9 @@
   <data name="AutoSearchingGHPC" xml:space="preserve">
     <value>搜寻路径···</value>
   </data>
+  <data name="DefaultSteamLibrary" xml:space="preserve">
+    <value>已添加默认steam路径: {0}</value>
+  </data>
   <data name="AdditionalSteamLibrary" xml:space="preserve">
     <value>已添加额外Steam库: {0}</value>
   </data>
@@ -2370,10 +2373,28 @@
   <data name="RestartRequired" xml:space="preserve">
     <value>需要重启</value>
   </data>
-  <data name="RestartApplicationError" xml:space="preserve">
-    <value>重启应用程序失败</value>
-  </data>
   <data name="RestartApplicationFailed" xml:space="preserve">
     <value>重启应用程序失败，请手动重启。</value>
+  </data>
+  <data name="GitHubApiToken" xml:space="preserve">
+    <value>GitHub API Token（可选）</value>
+  </data>
+  <data name="GitHubApiTokenDescription" xml:space="preserve">
+    <value>提高API访问限制（60→5000次/小时）</value>
+  </data>
+  <data name="GitHubApiTokenHint" xml:space="preserve">
+    <value>注意：配置token后将禁用代理加速，直连GitHub</value>
+  </data>
+  <data name="GitHubApiTokenGetUrl" xml:space="preserve">
+    <value>获取地址：https://github.com/settings/tokens</value>
+  </data>
+  <data name="FetchingGitHubReleasesWithToken" xml:space="preserve">
+    <value>使用token获取GitHub发布信息：{0}</value>
+  </data>
+  <data name="TranslationTipsTitle" xml:space="preserve">
+    <value>翻译插件提示</value>
+  </data>
+  <data name="TranslationTipsContent" xml:space="preserve">
+    <value>翻译插件会导致帧数下降，游戏中可以按Alt+T暂时关闭，Alt+1~3是指挥模式的快捷键，但是与翻译插件工具冲突，请在指挥模式下使用M键地图发布GO CODE</value>
   </data>
 </root>
