--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -1276,7 +1276,7 @@
     <value>Failed to apply language setting</value>
   </data>
   <data name="RestartApplicationError" xml:space="preserve">
-    <value>Error restarting application</value>
+    <value>Failed to restart application</value>
   </data>
   <data name="FailedToRestartApplication" xml:space="preserve">
     <value>Failed to restart application. Please restart manually</value>
@@ -2432,10 +2432,28 @@ Do you want to restart now?</value>
   <data name="RestartRequired" xml:space="preserve">
     <value>Restart Required</value>
   </data>
-  <data name="RestartApplicationError" xml:space="preserve">
-    <value>Failed to restart application</value>
-  </data>
   <data name="RestartApplicationFailed" xml:space="preserve">
     <value>Failed to restart application. Please restart manually.</value>
+  </data>
+  <data name="GitHubApiToken" xml:space="preserve">
+    <value>GitHub API Token (Optional)</value>
+  </data>
+  <data name="GitHubApiTokenDescription" xml:space="preserve">
+    <value>Increase API rate limit from 60 to 5000 requests/hour</value>
+  </data>
+  <data name="GitHubApiTokenHint" xml:space="preserve">
+    <value>Note: Configuring a token will disable proxy acceleration and use direct connection to GitHub</value>
+  </data>
+  <data name="GitHubApiTokenGetUrl" xml:space="preserve">
+    <value>Get token at: https://github.com/settings/tokens</value>
+  </data>
+  <data name="FetchingGitHubReleasesWithToken" xml:space="preserve">
+    <value>Fetching GitHub releases with token: {0}</value>
+  </data>
+  <data name="TranslationTipsTitle" xml:space="preserve">
+    <value>Translation Tips</value>
+  </data>
+  <data name="TranslationTipsContent" xml:space="preserve">
+    <value>The translator drops FPS. Press Alt+T to disable. Alt+1-3 conflict with it; use M-map to issue GO CODE in Commander Mode.</value>
   </data>
 </root>
