feat: Release version 1.1.4 with MelonLoader management and stability fixes / 发布1.1.4正式版，新增MelonLoader管理功能与稳定性修复
  - Add MelonLoader management panel in Settings: view installed version, enable/disable, and reinstall from GitHub releases / 在设置页新增MelonLoader管理面板：查看已安装版本、启用/禁用及从GitHub重新安装
  - Add MelonLoader disabled overlay on main view to indicate mod operations are blocked / 主界面新增MelonLoader已禁用遮罩层，提示MOD操作不可用
  - Detect installed MelonLoader version by parsing MelonLoader/Latest.log / 通过解析MelonLoader/Latest.log检测已安装版本号
  - Add GitHub API Token field to Setup Wizard network configuration page / 在安装向导网络配置页新增GitHub API Token输入框
  - Enforce proxy/token mutual exclusion in Setup Wizard: enabling proxy clears token and vice versa / 安装向导中强制代理与Token互斥：启用代理时清空Token，反之亦然
  - Fix game-running check to occur after download completes, preventing file write conflicts / 修复游戏运行检测时机，改为下载完成后检查，避免文件写入冲突
  - Fix MOD file matching to use exact filename comparison instead of partial match / 修复MOD文件匹配逻辑，改用精确文件名比较替代部分匹配
  - Fix backup restore to support backup_paths.json path mapping and detect empty backups / 修复备份还原以支持backup_paths.json路径映射并检测空备份
  - Fix backup directory cleanup to recursively delete residual files including backup_paths.json / 修复备份目录清理，改为递归删除含backup_paths.json的残留文件
  - Fix MOD sort order to preserve original JSON order for non-installed mods instead of alphabetical / 修复MOD排序，未安装MOD改为保持JSON原始顺序而非字母排序
  - Fix manifest save during load to use await instead of fire-and-forget / 修复加载时清单保存改用await而非即发即忘

--- a/Resources/Strings.resx
+++ b/Resources/Strings.resx
@@ -1290,6 +1290,48 @@
   <data name="MelonLoaderReleasesLoadError" xml:space="preserve">
     <value>Error loading MelonLoader releases</value>
   </data>
+  <data name="MelonLoaderManagement" xml:space="preserve">
+    <value>MelonLoader Framework Management</value>
+  </data>
+  <data name="MelonLoaderInstalledVersion" xml:space="preserve">
+    <value>Current Version:</value>
+  </data>
+  <data name="MelonLoaderNotDetected" xml:space="preserve">
+    <value>Not detected</value>
+  </data>
+  <data name="MelonLoaderDisabled" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
+  <data name="MelonLoaderEnabled" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="DisableMelonLoader" xml:space="preserve">
+    <value>Temporarily Disable</value>
+  </data>
+  <data name="EnableMelonLoader" xml:space="preserve">
+    <value>Re-enable</value>
+  </data>
+  <data name="ReinstallMelonLoader" xml:space="preserve">
+    <value>Reinstall / Update Version</value>
+  </data>
+  <data name="MelonLoaderDisableSuccess" xml:space="preserve">
+    <value>MelonLoader disabled</value>
+  </data>
+  <data name="MelonLoaderEnableSuccess" xml:space="preserve">
+    <value>MelonLoader enabled</value>
+  </data>
+  <data name="MelonLoaderDisableFailed" xml:space="preserve">
+    <value>Failed to disable MelonLoader</value>
+  </data>
+  <data name="MelonLoaderEnableFailed" xml:space="preserve">
+    <value>Failed to enable MelonLoader</value>
+  </data>
+  <data name="SelectMelonLoaderVersion" xml:space="preserve">
+    <value>Select version:</value>
+  </data>
+  <data name="MelonLoaderDisabledOverlayHint" xml:space="preserve">
+    <value>MelonLoader is temporarily disabled, mod functions unavailable</value>
+  </data>
   <data name="Manual" xml:space="preserve">
     <value>Manual</value>
   </data>
